turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:2: error: _ must follow method; cannot follow Unit
  forward(20) _, right(45) _
         ^Kerr36:2: error: _ must follow method; cannot follow Unit
  forward(20) _, right(45) _
                      ^